--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
       env: DISPLAY=:99.0
     # only on PR
     - os: osx
-      osx_image: xcode8
+      # default: osx_image: xcode8
       if: type IN (pull_request)
 
 cache:
