--- a/jbase.example.jbasescript.ui/plugin.xml
+++ b/jbase.example.jbasescript.ui/plugin.xml
@@ -205,6 +205,15 @@
 			</activeWhen>
 		</handler>
 	</extension>
+	<extension point="org.eclipse.core.contenttype.contentTypes">
+		<content-type
+			base-type="org.eclipse.core.runtime.text"
+			file-extensions="jbasescript"
+			id="jbase.example.jbasescript.Jbasescript.contenttype"
+			name="Jbasescript File"
+			priority="normal">
+		</content-type>
+	</extension>
 	<!-- adding resource factories -->
 	<extension
 		point="org.eclipse.emf.ecore.extension_parser">
