--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,11 @@ matrix:
     # always build this environment
     - os: linux
       jdk: oraclejdk8
-      env: DISPLAY=:99.0
+      env: DISPLAY=:99.0 ECLIPSE_TARGET=oxygen
     # only on PR
+    - os: linux
+      jdk: oraclejdk8
+      env: DISPLAY=:99.0 ECLIPSE_TARGET=neon
     - os: osx
       # default: osx_image: xcode8
       if: type IN (pull_request)
