--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
     - os: linux
       jdk: oraclejdk8
       env: DISPLAY=:99.0 ECLIPSE_TARGET=neon
+      if: type IN (pull_request)
     - os: osx
       # default: osx_image: xcode8
       if: type IN (pull_request)
