--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ matrix:
     # always build this environment
     - os: linux
       jdk: oraclejdk8
-      env: DISPLAY=:99.0 ECLIPSE_TARGET=oxygen
+      env: DISPLAY=:99.0 ECLIPSE_TARGET=oxygen ADDITIONAL="-Pjacoco-report coveralls:report"
     # only on PR
     - os: linux
       jdk: oraclejdk8
-      env: DISPLAY=:99.0 ECLIPSE_TARGET=neon
+      env: DISPLAY=:99.0 ECLIPSE_TARGET=neon ADDITIONAL=""
       if: type IN (pull_request)
     - os: osx
       # default: osx_image: xcode8
