--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -326,6 +326,12 @@
 						</filesets>
 					</configuration>
 				</plugin>
+
+				<plugin>
+					<groupId>org.eluder.coveralls</groupId>
+					<artifactId>coveralls-maven-plugin</artifactId>
+					<version>4.3.0</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
