--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -71,6 +71,10 @@
     <!-- Sonar -->
     <!-- <sonar.junit.reportsPath>../${project.artifactId}.tests/target/surefire-reports/</sonar.junit.reportsPath> -->
 
+    <!-- Always refer to the corresponding tests project (if it exists) otherwise 
+      Sonarqube won't be able to collect code coverage. For example, when analyzing 
+      project foo it wouldn't find code coverage information if it doesn't use 
+      foo.tests jacoco.exec. -->
     <sonar.jacoco.reportPaths>
       ../${project.artifactId}.tests/target/jacoco.exec
     </sonar.jacoco.reportPaths>
