--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -84,6 +84,10 @@
       **/JbaseIssueCodes.java
     </sonar.coverage.exclusions>
 
+    <!-- By default we exclude all projects from Sonarqube analysis,
+      and we explicitly enable the ones we want to analyze. -->
+    <sonar.skip>true</sonar.skip>
+
     <sonar.exclusions>
       **/testlanguage/**,
       **/example/**,
