--- a/jbase.releng/pom.xml
+++ b/jbase.releng/pom.xml
@@ -1,52 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<relativePath>../jbase.parent/pom.xml</relativePath>
-		<groupId>net.sf.xtext-jbase</groupId>
-		<artifactId>jbase.parent</artifactId>
-		<version>0.7.0-SNAPSHOT</version>
-	</parent>
+  <parent>
+    <relativePath>../jbase.parent/pom.xml</relativePath>
+    <groupId>net.sf.xtext-jbase</groupId>
+    <artifactId>jbase.parent</artifactId>
+    <version>0.7.0-SNAPSHOT</version>
+  </parent>
 
-	<artifactId>jbase.releng</artifactId>
-	<packaging>pom</packaging>
+  <artifactId>jbase.releng</artifactId>
+  <packaging>pom</packaging>
 
-	<modules>
-		<module>../jbase.targetplatform</module>
-		<module>../jbase.mwe2</module>
-		<module>../jbase.lib</module>
-		<module>../jbase</module>
-		<module>../jbase.ide</module>
-		<module>../jbase.ui</module>
-		<module>../jbase.testlanguage</module>
-		<module>../jbase.testlanguage.ide</module>
-		<module>../jbase.testlanguage.ui</module>
-		<module>../jbase.testlanguage.tests</module>
-		<module>../jbase.testlanguage.ui.tests</module>
-		<module>../jbase.tests.parent</module>
-		<module>../jbase.tests</module>
-		<module>../jbase.ui.tests</module>
-		<module>../jbase.tests.report</module>
-		<module>../jbase.example.purejbase</module>
-		<module>../jbase.example.purejbase.ui</module>
-		<module>../jbase.example.purejbase.tests</module>
-		<module>../jbase.example.jbasescript</module>
-		<module>../jbase.example.jbasescript.ide</module>
-		<module>../jbase.example.jbasescript.ui</module>
-		<module>../jbase.example.jbasescript.tests</module>
-		<module>../jbase.example.jbasescript.ui.tests</module>
-		<module>../domainmodel/org.eclipse.xtext.example.domainmodel</module>
-		<module>../domainmodel/org.eclipse.xtext.example.domainmodel.ui</module>
-		<module>../domainmodel/org.eclipse.xtext.example.domainmodel.tests</module>
-		<module>../jbase.ui.examples</module>
-		<module>../jbase.doc</module>
-		<module>../jbase.lib.feature</module>
-		<module>../jbase.ui.feature</module>
-		<module>../jbase.sdk</module>
-		<module>../jbase.site</module>
-	</modules>
+  <!-- The aggregator project must have this property set to false
+    otherwise nothing will be analyzed. -->
+  <properties>
+    <sonar.skip>false</sonar.skip>
+  </properties>
+
+  <modules>
+    <module>../jbase.targetplatform</module>
+    <module>../jbase.mwe2</module>
+    <module>../jbase.lib</module>
+    <module>../jbase</module>
+    <module>../jbase.ide</module>
+    <module>../jbase.ui</module>
+    <module>../jbase.testlanguage</module>
+    <module>../jbase.testlanguage.ide</module>
+    <module>../jbase.testlanguage.ui</module>
+    <module>../jbase.testlanguage.tests</module>
+    <module>../jbase.testlanguage.ui.tests</module>
+    <module>../jbase.tests.parent</module>
+    <module>../jbase.tests</module>
+    <module>../jbase.ui.tests</module>
+    <module>../jbase.tests.report</module>
+    <module>../jbase.example.purejbase</module>
+    <module>../jbase.example.purejbase.ui</module>
+    <module>../jbase.example.purejbase.tests</module>
+    <module>../jbase.example.jbasescript</module>
+    <module>../jbase.example.jbasescript.ide</module>
+    <module>../jbase.example.jbasescript.ui</module>
+    <module>../jbase.example.jbasescript.tests</module>
+    <module>../jbase.example.jbasescript.ui.tests</module>
+    <module>../domainmodel/org.eclipse.xtext.example.domainmodel</module>
+    <module>../domainmodel/org.eclipse.xtext.example.domainmodel.ui</module>
+    <module>../domainmodel/org.eclipse.xtext.example.domainmodel.tests</module>
+    <module>../jbase.ui.examples</module>
+    <module>../jbase.doc</module>
+    <module>../jbase.lib.feature</module>
+    <module>../jbase.ui.feature</module>
+    <module>../jbase.sdk</module>
+    <module>../jbase.site</module>
+  </modules>
 
 </project>
