--- a/jbase/pom.xml
+++ b/jbase/pom.xml
@@ -1,122 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<relativePath>../jbase.parent/pom.xml</relativePath>
-		<groupId>net.sf.xtext-jbase</groupId>
-		<artifactId>jbase.parent</artifactId>
-		<version>0.7.0-SNAPSHOT</version>
-	</parent>
+  <parent>
+    <relativePath>../jbase.parent/pom.xml</relativePath>
+    <groupId>net.sf.xtext-jbase</groupId>
+    <artifactId>jbase.parent</artifactId>
+    <version>0.7.0-SNAPSHOT</version>
+  </parent>
 
-	<artifactId>jbase</artifactId>
-	<packaging>eclipse-plugin</packaging>
+  <artifactId>jbase</artifactId>
+  <packaging>eclipse-plugin</packaging>
 
-	<dependencies>
-		<!-- This is required only for allowing jbase to
-			be used as a Maven jar with the xtext-maven-plugin  -->
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>jbase.lib</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-	</dependencies>
+  <properties>
+    <sonar.skip>false</sonar.skip>
+  </properties>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-clean-plugin</artifactId>
-				<version>2.5</version>
-				<configuration>
-					<filesets combine.children="append">
-						<!-- clean site target as well, to avoid warnings, since
-						that contain installed artifacts -->
-						<fileset>
-							<directory>${basedir}/../${project.artifactId}.site/target</directory>
-						</fileset>
-					</filesets>
-				</configuration>
-			</plugin>
+  <dependencies>
+    <!-- This is required only for allowing jbase to be used as a Maven jar 
+      with the xtext-maven-plugin -->
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>jbase.lib</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
 
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.4.0</version>
-				<executions>
-					<execution>
-						<id>generateEMFModel</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>java</goal>
-						</goals>
-						<configuration>
-							<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
-							<arguments>
-								<argument>/${project.basedir}/src/jbase/GenerateJbaseModelClasses.mwe2</argument>
-								<argument>-p</argument>
-								<argument>rootPath=/${project.basedir}/..</argument>
-							</arguments>
-							<classpathScope>compile</classpathScope>
-							<includePluginDependencies>true</includePluginDependencies>
-							<cleanupDaemonThreads>false</cleanupDaemonThreads><!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
-						</configuration>
-					</execution>
-					<execution>
-						<id>mwe2Launcher</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>java</goal>
-						</goals>
-						<configuration>
-							<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
-							<arguments>
-								<argument>/${project.basedir}/src/jbase/GenerateJbase.mwe2</argument>
-								<argument>-p</argument>
-								<argument>rootPath=/${project.basedir}/..</argument>
-							</arguments>
-							<classpathScope>compile</classpathScope>
-							<includePluginDependencies>true</includePluginDependencies>
-							<cleanupDaemonThreads>false</cleanupDaemonThreads><!-- see https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
-						</configuration>
-					</execution>
-				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>org.eclipse.emf</groupId>
-						<artifactId>org.eclipse.emf.mwe2.launch</artifactId>
-						<version>${mwe2Version}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.eclipse.xtext</groupId>
-						<artifactId>org.eclipse.xtext.common.types</artifactId>
-						<version>${xtextVersion}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.eclipse.xtext</groupId>
-						<artifactId>org.eclipse.xtext.xtext.generator</artifactId>
-						<version>${xtextVersion}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.eclipse.xtext</groupId>
-						<artifactId>org.eclipse.xtext.xbase</artifactId>
-						<version>${xtextVersion}</version>
-					</dependency>
-					<dependency>
-						<groupId>org.eclipse.xtext</groupId>
-						<artifactId>xtext-antlr-generator</artifactId>
-						<version>[2.1.1, 3)</version>
-					</dependency>
-				</dependencies>
-			</plugin>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <filesets combine.children="append">
+            <!-- clean site target as well, to avoid warnings, since that 
+              contain installed artifacts -->
+            <fileset>
+              <directory>${basedir}/../${project.artifactId}.site/target</directory>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>
 
-			<plugin>
-				<groupId>org.eclipse.xtend</groupId>
-				<artifactId>xtend-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.4.0</version>
+        <executions>
+          <execution>
+            <id>generateEMFModel</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>java</goal>
+            </goals>
+            <configuration>
+              <mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
+              <arguments>
+                <argument>/${project.basedir}/src/jbase/GenerateJbaseModelClasses.mwe2</argument>
+                <argument>-p</argument>
+                <argument>rootPath=/${project.basedir}/..</argument>
+              </arguments>
+              <classpathScope>compile</classpathScope>
+              <includePluginDependencies>true</includePluginDependencies>
+              <cleanupDaemonThreads>false</cleanupDaemonThreads><!-- see 
+                https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
+            </configuration>
+          </execution>
+          <execution>
+            <id>mwe2Launcher</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>java</goal>
+            </goals>
+            <configuration>
+              <mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
+              <arguments>
+                <argument>/${project.basedir}/src/jbase/GenerateJbase.mwe2</argument>
+                <argument>-p</argument>
+                <argument>rootPath=/${project.basedir}/..</argument>
+              </arguments>
+              <classpathScope>compile</classpathScope>
+              <includePluginDependencies>true</includePluginDependencies>
+              <cleanupDaemonThreads>false</cleanupDaemonThreads><!-- see 
+                https://bugs.eclipse.org/bugs/show_bug.cgi?id=475098#c3 -->
+            </configuration>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.eclipse.emf</groupId>
+            <artifactId>org.eclipse.emf.mwe2.launch</artifactId>
+            <version>${mwe2Version}</version>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>org.eclipse.xtext.common.types</artifactId>
+            <version>${xtextVersion}</version>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>org.eclipse.xtext.xtext.generator</artifactId>
+            <version>${xtextVersion}</version>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>org.eclipse.xtext.xbase</artifactId>
+            <version>${xtextVersion}</version>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.xtext</groupId>
+            <artifactId>xtext-antlr-generator</artifactId>
+            <version>[2.1.1, 3)</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+
+      <plugin>
+        <groupId>org.eclipse.xtend</groupId>
+        <artifactId>xtend-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
