--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -48,21 +48,21 @@
     <tycho-extras-version>${tycho-version}</tycho-extras-version>
     <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
     <maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
-    <junit-version>4.11</junit-version>
+    <junit-version>4.12</junit-version>
     <findbugs-version>2.5.5</findbugs-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <os-jvm-flags />
     <memoryArgs>-Xms256M -Xmx1024M -XX:PermSize=256M
       -XX:MaxPermSize=256M -XX:+HeapDumpOnOutOfMemoryError</memoryArgs>
-    <xtext.version>2.13.0</xtext.version>
+    <xtext.version>2.15.0</xtext.version>
     <xtext-version>${xtext.version}</xtext-version>
     <xtextVersion>${xtext.version}</xtextVersion>
     <mwe2Version>2.9.1.201705291010</mwe2Version>
     <platform-version>[3.9,4.0)</platform-version>
     <fornax-oaw-m2-plugin-version>3.5.1</fornax-oaw-m2-plugin-version>
 
-    <eclipse-target>oxygen</eclipse-target>
-    <target-file-name>${eclipse-target}-xtext-2.13</target-file-name>
+    <eclipse-target>2018-09</eclipse-target>
+    <target-file-name>${eclipse-target}-xtext-2.15</target-file-name>
 
     <!-- <jacoco.reportPath>../target/jacoco.exec</jacoco.reportPath> -->
     <!-- <findbugs.reportPath>../target/findbugs</findbugs.reportPath> -->
