--- a/.travis.yml
+++ b/.travis.yml
@@ -53,4 +53,4 @@ after_success:
  - ls -lR jbase.site/target/repository/
 
 after_failure:
- - find ./jbase/jbase.tests/target/ -name "*.log" -exec cat {} \;
+ - find ./ -name "*.log" -exec cat {} \;
