--- a/jbase.tests/pom.xml
+++ b/jbase.tests/pom.xml
@@ -40,7 +40,7 @@
 							<skip>${swtbot.tests.only}</skip>
 							<useUIHarness>false</useUIHarness>
 							<useUIThread>false</useUIThread>
-							<argLine>${tycho.testArgLine} ${moduleProperties}</argLine>
+							<argLine>${additionalTestArgLine} ${moduleProperties}</argLine>
 							<includes>
 								<include>**/jbase/tests/*Test.java</include>
 							</includes>
