--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -406,6 +406,27 @@
             </jacocoReports>
           </configuration>
         </plugin>
+
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-packaging-plugin</artifactId>
+          <version>${tycho-version}</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.eclipse.tycho.extras</groupId>
+              <artifactId>tycho-buildtimestamp-jgit</artifactId>
+              <version>${tycho-extras-version}</version>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <timestampProvider>jgit</timestampProvider>
+            <jgit.ignore>
+              pom.xml
+              .polyglot.build.properties
+            </jgit.ignore>
+            <format>'v'yyyyMMdd'-'HHmm</format>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -517,15 +538,6 @@
             </environment>
           </environments>
           <includePackedArtifacts>true</includePackedArtifacts>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.eclipse.tycho</groupId>
-        <artifactId>tycho-packaging-plugin</artifactId>
-        <version>${tycho-version}</version>
-        <configuration>
-          <format>'v'yyyyMMdd'-'HHmm</format>
         </configuration>
       </plugin>
     </plugins>
