--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -406,6 +406,15 @@
               <jacocoReport>${project.basedir}/../jbase.tests.report/target/site/jacoco-aggregate/jacoco.xml</jacocoReport>
             </jacocoReports>
           </configuration>
+          <dependencies>
+            <!-- This is required when using JDK 9 or higher since javax.xml.bind has 
+              been removed from the JDK -->
+            <dependency>
+              <groupId>javax.xml.bind</groupId>
+              <artifactId>jaxb-api</artifactId>
+              <version>2.3.1</version>
+            </dependency>
+          </dependencies>
         </plugin>
 
         <plugin>
