--- a/.github/workflows/windows-mac.yml
+++ b/.github/workflows/windows-mac.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         os: ['macos-latest', 'windows-latest']
+      fail-fast: false
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -30,4 +31,4 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml', '**/*.yml', '**/*.target') }}
         restore-keys: ${{ runner.os }}-m2-
     - name: Build with Maven
-      run: mvn -f jbase.releng/pom.xml clean verify -Dtycho.disableP2Mirrors=true
+      run: mvn -f jbase.releng/pom.xml -Dtycho.disableP2Mirrors=true clean verify
