--- a/.github/workflows/windows-mac.yml
+++ b/.github/workflows/windows-mac.yml
@@ -31,4 +31,4 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml', '**/*.yml', '**/*.target') }}
         restore-keys: ${{ runner.os }}-m2-
     - name: Build with Maven
-      run: mvn -f jbase.releng/pom.xml -Dtycho.disableP2Mirrors=true clean verify
+      run: mvn -f jbase.releng/pom.xml '-Dtycho.disableP2Mirrors=true' clean verify
