--- a/.github/workflows/windows-mac.yml
+++ b/.github/workflows/windows-mac.yml
@@ -5,6 +5,10 @@ name: Java CI with Maven on Windows and Mac
 
 on:
   push:
+    # Sequence of patterns matched against refs/heads
+    branches:
+      # Push events on the main branch
+      - master
   pull_request:
 
 jobs:
